@@ -1,3 +1,8 @@
+2005-02-21  Anthony Green  <green@redhat.com>
+
+	* gnu/java/rmi/registry/RegistryImpl.java:
+	Change year for '--version' to 2005.
+
 2005-02-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	Merge of interfaces and exceptions to HEAD from
